<resources>
    <string name="app_name">Avtivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_normal">NormalActivity</string>
    <string name="title_activity_dialog">DialogActivity</string>
    <string name="title_activity_first">FirstActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_contacts">ContactsActivity</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_noti">NotiActivity</string>
    <string name="title_activity_update_ui">UpdateUIActivity</string>
    <string name="title_activity_main_service">MainServiceActivity</string>
    <string name="title_activity_clock">ClockActivity</string>


    <string name="menu_settings">Settings</string>
    <string name="s1">SYSTEM_UI_FLAG_VISIBLE</string>
    <string name="s2">INVISIBLE</string>
    <string name="s3">SYSTEM_UI_FLAG_FULLSCREEN</string>
    <string name="s4">SYSTEM_UI_FLAG_LAYOUT_FULLSCREEN</string>
    <string name="s5">SYSTEM_UI_FLAG_LAYOUT_HIDE_NAVIGATION</string>
    <string name="s6">SYSTEM_UI_LAYOUT_FLAGS</string>
    <string name="s7">SYSTEM_UI_FLAG_HIDE_NAVIGATION</string>
    <string name="s8">SYSTEM_UI_FLAG_LOW_PROFILE</string>

</resources>
